Add initial Kubernetes support
Deploy thor, roxie and master controllers in order. The master
controller will create and transfer environment.xml and start hpcc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 hpcc-master:
    image: hpccsystems/platform-ce:5.4.8-1trusty
-   command:  /tmp/run_master.sh
+   command:  bash -c "cd /tmp; /tmp/run_master.sh"
    ports:
      - "8010:8010"
    links:
