--- a/hpcc/centos7/Dockerfile.template
+++ b/hpcc/centos7/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM hpccsystems/linux:el7_hpcc5
+FROM hpccsystems/linux:el7_<BASE_SUFFIX>
 MAINTAINER Xiaoming Wang <xiaoming.wang@lexisnexis.com>
 RUN yum update -y 
 RUN yum install -y  net-tools which
@@ -7,6 +7,10 @@ RUN wget <URL_BASE>/<HPCC_IMAGE>
 RUN yum install --nogpgcheck -y <HPCC_IMAGE>
 EXPOSE 8010 8002 8015 9876
 ADD run_master.sh /tmp/
+ADD get_ips.sh /tmp/
+ADD get_ips.py /tmp/
 RUN chmod +x /tmp/run_master.sh
+RUN chmod +x /tmp/get_ips.sh
+RUN chmod +x /tmp/get_ips.py
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c",  "/usr/sbin/sshd -D"]
