--- a/hpcc/trusty/Dockerfile.template
+++ b/hpcc/trusty/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM hpccsystems/linux:trusty_hpcc5
+FROM hpccsystems/linux:trusty_<BASE_SUFFIX>
 MAINTAINER Xiaoming Wang <xiaoming.wang@lexisnexis.com>
 RUN apt-get update  
 RUN wget <URL_BASE>/<HPCC_IMAGE>
@@ -7,6 +7,10 @@ RUN useradd -s /bin/bash -r -m -d /home/hpcc -g hpcc -c "hpcc Runtime User" hpcc
 RUN dpkg -i <HPCC_IMAGE>
 EXPOSE 8010 8002 8015 9876
 ADD run_master.sh /tmp/
+ADD get_ips.py /tmp/
+ADD get_ips.sh /tmp/
 RUN chmod +x /tmp/run_master.sh
+RUN chmod +x /tmp/get_ips.py
+RUN chmod +x /tmp/get_ips.sh
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c", "sudo /usr/sbin/sshd -D"]
