Update docker-compose.yml to version 2.0 add docker-commpose-network.yml to customer network setup
Also add "-x" option update run_master.sh script if using docker-compose-network.yml
It will bypass ip list collection. User should set local ip to ips.txt
thor ips to thor_ips.txt and roxie ips to roxie_ips.txt. user need manually run:
./run_master.sh -x

Update README.md

--- a/docker-compose-network.yml
+++ b/docker-compose-network.yml
@@ -20,3 +20,9 @@ services:
     image: hpccsystems/platform-ce:5.4.8-1trusty
     privileged: true
     tty: true
+
+
+networks:
+  default:
+    external: 
+      name: hpccbridge
