--- a/hpcc/el7/Dockerfile.template.ce
+++ b/hpcc/el7/Dockerfile.template.ce
@@ -3,8 +3,8 @@ MAINTAINER Xiaoming Wang <xiaoming.wang@lexisnexis.com>
 RUN yum update -y 
 RUN yum install -y  net-tools which
 RUN chmod u+s $(which ping)
-RUN wget <URL_BASE>/<HPCC_IMAGE>
-RUN yum install --nogpgcheck -y <HPCC_IMAGE>
+RUN wget <URL_BASE>/<PLATFORM_TYPE>-Candidate-<VERSION>/bin/platform/hpccsystems-platform-community_<FILE_NAME_SUFFIX>
+RUN yum install --nogpgcheck -y hpccsystems-platform-community_<FILE_NAME_SUFFIX>
 EXPOSE 8010 8002 8015 9876
 ADD run_master.sh /tmp/
 ADD get_ips.sh /tmp/
