--- a/hpcc/el7/Dockerfile.template.ce
+++ b/hpcc/el7/Dockerfile.template.ce
@@ -7,9 +7,11 @@ RUN wget <URL_BASE>/<PLATFORM_TYPE>-Candidate-<VERSION>/bin/platform/hpccsystems
 RUN yum install --nogpgcheck -y hpccsystems-platform-community_<FILE_NAME_SUFFIX>
 EXPOSE 8010 8002 8015 9876
 ADD run_master.sh /tmp/
+ADD config_hpcc.sh /tmp/
 ADD get_ips.sh /tmp/
 ADD get_ips.py /tmp/
 RUN chmod +x /tmp/run_master.sh
+RUN chmod +x /tmp/hpcc_config.sh
 RUN chmod +x /tmp/get_ips.sh
 RUN chmod +x /tmp/get_ips.py
 RUN mkdir -p /var/run/sshd
