Update envgen usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   hpcc-master:
-    image: hpccsystems/platform-ce:6.0.0-rc4trusty
+    image: hpccsystems/platform-ce:6.0.0-rc6trusty
     command:  bash -c "cd /tmp; set -e && /tmp/run_master.sh"
     ports:
       - "8010:8010"
@@ -14,15 +14,15 @@ services:
       - MAX_ROXIE_INDEX=10
       - MAX_THOR_INDEX=10
       - SLAVES_PER_NODE=1
-      - DOWNLOAD_URL=https://github.com/xwang2713/HPCC-Docker
-      - DOWNLOAD_METHOD=git
+      #- DOWNLOAD_URL=https://github.com/xwang2713/HPCC-Docker
+      #- DOWNLOAD_METHOD=git
 
   hpcc-thor:
-    image: hpccsystems/platform-ce:6.0.0-rc4trusty
+    image: hpccsystems/platform-ce:6.0.0-rc6trusty
     privileged: true
     tty: true
 
   hpcc-roxie:
-    image: hpccsystems/platform-ce:6.0.0-rc4trusty
+    image: hpccsystems/platform-ce:6.0.0-rc6trusty
     privileged: true
     tty: true
