--- a/hpcc/el7/Dockerfile.template.ce
+++ b/hpcc/el7/Dockerfile.template.ce
@@ -11,7 +11,7 @@ ADD config_hpcc.sh /tmp/
 ADD get_ips.sh /tmp/
 ADD get_ips.py /tmp/
 RUN chmod +x /tmp/run_master.sh
-RUN chmod +x /tmp/hpcc_config.sh
+RUN chmod +x /tmp/config_hpcc.sh
 RUN chmod +x /tmp/get_ips.sh
 RUN chmod +x /tmp/get_ips.py
 RUN mkdir -p /var/run/sshd
