--- a/hpcc/xenial/Dockerfile.template.ce
+++ b/hpcc/xenial/Dockerfile.template.ce
@@ -1,6 +1,7 @@
 FROM hpccsystems/linux:xenial_<BASE_SUFFIX>
 MAINTAINER Xiaoming Wang <xiaoming.wang@lexisnexis.com>
 RUN apt-get update  
+RUN apt-get install psmisc
 RUN wget <URL_BASE>/<PLATFORM_TYPE>-Candidate-<VERSION>/bin/platform/hpccsystems-platform-community_<FILE_NAME_SUFFIX>
 RUN groupadd hpcc
 RUN useradd -s /bin/bash -r -m -d /home/hpcc -g hpcc -c "hpcc Runtime User" hpcc
