--- a/hpcc/el6/Dockerfile.template.ce
+++ b/hpcc/el6/Dockerfile.template.ce
@@ -1,7 +1,7 @@
 FROM hpccsystems/linux:el6_<BASE_SUFFIX>
 MAINTAINER Xiaoming Wang <xiaoming.wang@lexisnexis.com>
 RUN yum update -y 
-RUN yum install -y  net-tools which
+RUN yum install -y  net-tools which psmisc
 RUN chmod u+s $(which ping)
 RUN groupadd hpcc
 RUN useradd -s /bin/bash -r -m -d /home/hpcc -g hpcc -c "hpcc Runtime User" hpcc
