--- a/hpcc/el7/Dockerfile.template.ce
+++ b/hpcc/el7/Dockerfile.template.ce
@@ -10,9 +10,8 @@ ADD run_master.sh /tmp/
 ADD config_hpcc.sh /tmp/
 ADD get_ips.sh /tmp/
 ADD get_ips.py /tmp/
-RUN chmod +x /tmp/run_master.sh
-RUN chmod +x /tmp/config_hpcc.sh
-RUN chmod +x /tmp/get_ips.sh
-RUN chmod +x /tmp/get_ips.py
+ADD start_hpcc.sh /tmp/
+RUN chmod +x /tmp/*.sh
+RUN chmod +x /tmp/*.py
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c",  "/usr/sbin/sshd -D"]
