--- a/hpcc/el7/Dockerfile.template.ce
+++ b/hpcc/el7/Dockerfile.template.ce
@@ -8,10 +8,11 @@ RUN yum install --nogpgcheck -y hpccsystems-platform-community_<FILE_NAME_SUFFIX
 EXPOSE 8010 8002 8015 9876
 ADD run_master.sh /tmp/
 ADD config_hpcc.sh /tmp/
-ADD get_ips.sh /tmp/
 ADD get_ips.py /tmp/
-ADD start_hpcc.sh /tmp/
-RUN chmod +x /tmp/*.sh
-RUN chmod +x /tmp/*.py
+ADD get_ips.sh /tmp/
+RUN chmod +x /tmp/run_master.sh
+RUN chmod +x /tmp/config_hpcc.sh
+RUN chmod +x /tmp/get_ips.py
+RUN chmod +x /tmp/get_ips.sh
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c",  "/usr/sbin/sshd -D"]
