--- a/hpcc/el7/Dockerfile.template.plugins
+++ b/hpcc/el7/Dockerfile.template.plugins
@@ -23,10 +23,12 @@ RUN yum install --nogpgcheck -y hpccsystems-plugin-sqlite3embed_<FILE_NAME_SUFFI
 RUN wget <URL_BASE>/CE-Candidate-<VERSION>/bin/plugins/hpccsystems-plugin-v8embed_<FILE_NAME_SUFFIX>
 RUN yum install --nogpgcheck -y hpccsystems-plugin-v8embed_<FILE_NAME_SUFFIX>
 ADD run_master.sh /tmp/
-ADD get_ips.sh /tmp/
+ADD config_hpcc.sh /tmp/
 ADD get_ips.py /tmp/
+ADD get_ips.sh /tmp/
 RUN chmod +x /tmp/run_master.sh
-RUN chmod +x /tmp/get_ips.sh
+RUN chmod +x /tmp/config_hpcc.sh
 RUN chmod +x /tmp/get_ips.py
+RUN chmod +x /tmp/get_ips.sh
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c",  "/usr/sbin/sshd -D"]
