--- a/hpcc/xenial/Dockerfile.template.ce
+++ b/hpcc/xenial/Dockerfile.template.ce
@@ -11,8 +11,9 @@ ADD run_master.sh /tmp/
 ADD config_hpcc.sh /tmp/
 ADD get_ips.py /tmp/
 ADD get_ips.sh /tmp/
-ADD start_hpcc.sh /tmp/
-RUN chmod +x /tmp/*.sh
-RUN chmod +x /tmp/*.py
+RUN chmod +x /tmp/run_master.sh
+RUN chmod +x /tmp/config_hpcc.sh
+RUN chmod +x /tmp/get_ips.py
+RUN chmod +x /tmp/get_ips.sh
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c", "sudo /usr/sbin/sshd -D"]
