--- a/hpcc/trusty/Dockerfile.template.ce
+++ b/hpcc/trusty/Dockerfile.template.ce
@@ -10,14 +10,10 @@ RUN groupadd hpcc
 RUN useradd -s /bin/bash -r -m -d /home/hpcc -g hpcc -c "hpcc Runtime User" hpcc
 RUN dpkg -i hpccsystems-platform-community_<FILE_NAME_SUFFIX>
 EXPOSE 8010 8002 8015 9876
-ADD run_master.sh /tmp/
-ADD config_hpcc.sh /tmp/
-ADD get_ips.py /tmp/
-ADD get_ips.sh /tmp/
-RUN chmod +x /tmp/run_master.sh
-RUN chmod +x /tmp/config_hpcc.sh
-RUN chmod +x /tmp/get_ips.py
-RUN chmod +x /tmp/get_ips.sh
+ADD *.sh /tmp/
+ADD *.py /tmp/
+RUN chmod +x /tmp/*.sh
+RUN chmod +x /tmp/*.py
 RUN cp -r /home/hpcc/.ssh ~/
 RUN mkdir -p /var/run/sshd
 CMD ["bash", "-c", "set -e && sudo /usr/sbin/sshd -D"]
