--- a/legacy/clienttools/Dockerfile.intern
+++ b/legacy/clienttools/Dockerfile.intern
@@ -13,9 +13,9 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 ################################################################################
-FROM hpccsystems/hpcc-base:7-bionic
+FROM hpccsystemslegacy/hpcc-base
 
-ARG version=7.6.29-closedown0
+ARG version=
 #RUN if [ -z "${version}" ] ; then echo Missing HPCC version; exit 1; else : ; fi
 
 
