--- a/legacy/dev/ubuntu/base/Dockerfile
+++ b/legacy/dev/ubuntu/base/Dockerfile
@@ -13,7 +13,7 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 ################################################################################
-FROM ubuntu:bionic
+FROM ubuntu:focal
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 		ca-certificates       \
