Add back apt-get update

--- a/ml/gnn/Dockerfile
+++ b/ml/gnn/Dockerfile
@@ -23,7 +23,7 @@ ARG BUILD_LABEL
 FROM hpccsystems/platform-core:${BUILD_LABEL}
 USER root
 
-RUN apt-get install -y python3-pip --fix-missing
+RUN apt-get update && apt-get install -y python3-pip --fix-missing
 RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install       \
