--- a/ml/ml/Dockerfile
+++ b/ml/ml/Dockerfile
@@ -24,7 +24,7 @@ FROM hpccsystems/platform-core:${BUILD_LABEL}
 USER root
 
 # Machine Learning Dependencies
-RUN apt-get install -y python3 python3-pip --fix-missing
+RUN apt-get update && apt-get install -y python3 python3-pip --fix-missing
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install       \
     scikit-learn
