Disable ML builds since they will be built with HPCC-Platform

--- a/.github/workflows/build-ml-and-publish.yml
+++ b/.github/workflows/build-ml-and-publish.yml
@@ -4,7 +4,7 @@ name: Build and publish
 on:
   push:
     tags:
-    - 'community_*'
+    - '!community_*'
     - '!community_7.8.*'
     - '!community_7.6.*'
     - '!community_7.4.*'
